// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSelector render with projects 1`] = `
<div>
  <div
    class="bp3-popover-wrapper projectSelect bp3-dark bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <button
          class="bp3-button bp3-minimal bp3-align-left projectButton"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Select Project
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectSelector render with projects 2`] = `
<div>
  <div
    class="bp3-popover-wrapper projectSelect bp3-dark bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class=""
      >
        <button
          class="bp3-button bp3-minimal bp3-align-left projectButton"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Select Project
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <div
                class="bp3-input-group"
              >
                <span
                  class="bp3-icon bp3-icon-search"
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input"
                  placeholder="Start typing to search in all  items"
                  type="text"
                  value=""
                />
              </div>
              <ul
                class="bp3-menu"
              >
                <li
                  class=""
                >
                  <a
                    class="bp3-menu-item bp3-popover-dismiss"
                  >
                    <div
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      TestCiproject
                    </div>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="bp3-menu-item bp3-popover-dismiss"
                  >
                    <div
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      test11
                    </div>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="bp3-menu-item bp3-popover-dismiss"
                  >
                    <div
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      Project 1
                    </div>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="bp3-menu-item bp3-popover-dismiss"
                  >
                    <div
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      fdfder32432
                    </div>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
